My Initial Commit

--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-   <meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
    <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
   <link rel="stylesheet" href="assets\css\styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Materialize Tutorial Title</title>
-  </head>
-  <body>
+</head>
+<body>
     <!--Navigation Section  -->
     <nav>
-    <div class="nav-wrapper blue-grey darken-2">
-      <a href="#!" class="brand-logo"><span class=" logo grey-text text-lighten-2">Marigi Ndegwa - FreeLance Design</span></a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </div>
-  </nav>
+      <div class="nav-wrapper blue-grey darken-2">
+        <a href="#!" class="brand-logo"><span class=" logo grey-text text-lighten-2">Marigi Ndegwa - FreeLance Design</span></a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+    </nav>
 
   <!--Hero Section  -->
-  <div class="parallax-container valign-wrapper">
-    <div class="container">
-      <div class="row">
-        <div class="col l8 s12 white-text">
-          <h4 class="thin-text left-alighn valign"> I'm Marigi, a freelance Web Designer &amp; front-end developer based in Nairobi, Kenya</h4>
+    <div class="parallax-container valign-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col l8 s12 white-text">
+            <h4 class="thin-text left-align valign"> I'm Marigi, a freelance Web Designer &amp; front-end developer based in Nairobi, Kenya</h4>
+          </div>
         </div>
-     </div>
-     <div class = "row">
-       <div class = "col l4">
-         <a class="waves-effect btn-large hoverable red accent-2">Get a Free Quote</a>
-       </div>
-     </div>
-    </div>
-      <div class="parallax"><img src="assets\img\pexels-photo-160107 (1).jpeg"></div>
+        <div class = "row">
+          <div class = "col l4">
+            <a class="waves-effect btn-large hoverable red accent-2">Get a Free Quote</a>
+          </div>
+        </div>
+      </div>
+      <div class="parallax">
+        <img src="assets\img\pexels-photo-160107.jpeg">
+      </div>
     </div>
     <!--Services-->
     <div class="container">
@@ -57,71 +59,234 @@
       </div>
       <div class="row">
         <div class="col l6 m12 s12">
-        <div class="card medium light-blue accent-4 z-depth-2">
-         <div class="card-content white-text">
-           <h3 class="center-align"><i class="fa fa-desktop fa-3x" aria-hidden="true"></i></h3>
-             <div class="divider"></div>
-             <span class="card-title">Custom Web Design</span>
+          <div class="card medium light-blue accent-4 z-depth-2">
+            <div class="card-content white-text">
+              <h3 class="center-align"><i class="fa fa-desktop fa-3x" aria-hidden="true"></i></h3>
+            <div class="divider"></div>
+            <span class="card-title">Custom Web Design</span>
               <p>I design attractive, functional websites. I provide total solutions, from design
                 design to deployment and I'm not finished until you are happy with the final project
-             </p>
-         </div>
-          <div class="card-action">
-            <a href="#">Find Out More</a>
+              </p>
+            </div>
+            <div class="card-action">
+              <a href="#">Find Out More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col l6 m12 s12">
+          <div class="card medium blue darken-4 z-depth-2">
+            <div class="card-content white-text">
+              <h3 class="center-align"><i class="fa fa-line-chart fa-3x" aria-hidden="true"></i></h3>
+              <div class="divider"></div>
+              <span class="card-title">Search Engine Optimization</span>
+              <p>What good is stunning functional website if nobody can find it. I can help you rise above
+              the noise and rise above the competition in rankings.
+              </p>
+            </div>
+            <div class="card-action">
+              <a href="#">Find Out More</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col l6 m12 s12">
-      <div class="card medium blue darken-4 z-depth-2">
-       <div class="card-content white-text">
-         <h3 class="center-align"><i class="fa fa-line-chart fa-3x" aria-hidden="true"></i></h3>
-           <div class="divider"></div>
-           <span class="card-title">Search Engine Optimization</span>
-            <p>What good is stunning functional website if nobody can find it. I can help you rise above
-              the noise and rise above the competition in rankings.
-           </p>
-       </div>
-        <div class="card-action">
-          <a href="#">Find Out More</a>
-        </div>
-      </div>
-    </div>
-    </div>
-    <div class = "row">
-      <div class="col l6 m12 s12">
-      <div class="card medium blue darken-4 z-depth-2">
-       <div class="card-content white-text">
-         <h3 class="center-align"><i class="fa fa-file-text-o fa-3x" aria-hidden="true"></i></h3>
-           <div class="divider"></div>
-           <span class="card-title">Content Creation</span>
+      <div class = "row">
+        <div class="col l6 m12 s12">
+          <div class="card medium blue darken-4 z-depth-2">
+            <div class="card-content white-text">
+              <h3 class="center-align">
+                <i class="fa fa-file-text-o fa-3x" aria-hidden="true"></i>
+              </h3>
+            <div class="divider"></div>
+            <span class="card-title">Content Creation</span>
             <p>Great Content on your site will bring in new customers or keep your existing customers
               coming back. I can help you with written content, blog articles or videos.
-           </p>
-       </div>
-        <div class="card-action">
-          <a href="#">Find Out More</a>
+            </p>
+            </div>
+            <div class="card-action">
+              <a href="#">Find Out More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col l6 m12 s12">
+          <div class="card medium light-blue accent-4 z-depth-2">
+            <div class="card-content white-text">
+              <h3 class="center-align">
+                <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+              </h3>
+            <div class="divider"></div>
+            <span class="card-title">Email Marketing</span>
+              <p>Maintaining an active email list helps you to keep customers engaged. I can help you start a list,
+            grow your list, or help you make the most of most valuable customers by reaching out via email.
+              </p>
+            </div>
+            <div class="card-action">
+              <a href="#">Find Out More</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col l6 m12 s12">
-    <div class="card medium light-blue accent-4 z-depth-2">
-     <div class="card-content white-text">
-       <h3 class="center-align"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></h3>
-         <div class="divider"></div>
-         <span class="card-title">Email Marketing</span>
-          <p>Maintaining an active email list helps you to keep customers engaged. I can help you start a list,
-            grow your list, or help you make the most of most valuable customers by reaching out via email.
-         </p>
-     </div>
-      <div class="card-action">
-        <a href="#">Find Out More</a>
+    <!--Call The Action-->
+    <div class="parallax-container valign-wrapper">
+      <div class="container">
+        <div class="row center">
+          <div class="col l10 offset-l1 valign">
+            <h2 class="center-align white-text cta">Interested in Working Together</h2>
+            <a href="#" class="center btn-large hoverable red accent-2">GET IN TOUCH</a>
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="assets\img\dude programing.jpeg"></div>
+    </div>
+    <!--Work Section--->
+    <div class="container">
+      <h2 class="section-header">Selected Work</h2>
+      <div class="row">
+        <div class="col l4 m8 offset-m2 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="assets\img\personal website.jpeg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Uthi.com<i class="material-icons right">more_vert</i></span>
+              <p>
+                <a href="#">View Live Site</a>
+              </p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Uthi.com<i class="material-icons right">close</i></span>
+              <p>This is my first personal page. It was created using Materialize(HTML and CSS). It was designed with Mobile in mind and the entire layout
+              can be viewed from any device.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col l4 m8 offset-m2 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="assets\img\webiste SEO.jpeg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Uthi.com<i class="material-icons right">more_vert</i></span>
+              <p>
+                <a href="#">View Live Site</a>
+              </p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Uthi.com<i class="material-icons right">close</i></span>
+              <p>This is my first personal page. It was created using Materialize(HTML and CSS). It was designed with Mobile in mind and the entire layout
+              can be viewed from any device.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col l4 m8 offset-m2 s12">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="assets\img\website e-commerce.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Uthi.com<i class="material-icons right">more_vert</i></span>
+              <p>
+                <a href="#">View Live Site</a>
+              </p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Uthi.com<i class="material-icons right">close</i></span>
+              <p>This is my first personal page. It was created using Materialize(HTML and CSS). It was designed with Mobile in mind and the entire layout
+              can be viewed from any device.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-
+    <!---divider---->
+    <div class="container">
+      <div class="divider"></div>
     </div>
+    <!---About Me--->
+    <div class="container">
+      <div class="row">
+        <h2 class="section-header">About Me</h2>
+      </div>
+      <div class="row">
+        <p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+           qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
+    <!--Contact Me-->
+    <div class="container">
+      <div class="row">
+        <h2 class="section-header">Contact</h2>
+      </div>
+    </div>
+    <div class="container blue darken-4 contact-form">
+      <div class="row">
+        <div class="col l8 offset-l2 m12 s12">
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s6">
+                  <input placeholder="First Name" id="first_name" type="text" class="validate">
+                  <label for="first_name">First Name</label>
+                </div>
+                <div class="input-field col s6">
+                  <input placeholder="Last Name" id="last_name" type="text" class="validate">
+                  <label for="last_name">Last Name</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input placeholder="Email" id="email" type="email" class="validate">
+                  <label for="email">Email</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input class="validate">
+                  <label>Tell Me about your Project</label>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Footer--->
+    <footer class="page-footer blue-grey darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 m12 s12">
+            <h5 class="white-text">Nairobi Web Developer</h5>
+            <ul>
+              <li class="grey-text text-lighten-4">PSD to HTML</li>
+              <li class="grey-text text-lighten-4">Updates and Upgrades</li>
+              <li class="grey-text text-lighten-4">UI/UX Design</li>
+              <li class="grey-text text-lighten-4">Site Maintainance</li>
+              <li class="grey-text text-lighten-4">Hosting</li>
+            </ul>
+          </div>
+          <div class="col l4 offset-l2 m12 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a href="#" class="grey-text text-lighten-3">Services</a></li>
+              <li><a href="#" class="grey-text text-lighten-3">About</a></li>
+              <li><a href="#" class="grey-text text-lighten-3">Work</a></li>
+              <li><a href="#" class="grey-text text-lighten-3">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright blue-grey darken-4">
+        <div class="container">
+          <div class="row">
+            <p>&copy; 2018 Copyright Uthi, All Rights Reserved</p>
+            <a href="#" class="grey-text text-lighten-4 right">Private Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-2.2.4.js"  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
