--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Services</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Work</a></li>
+          <li><a href="#">Projects</a></li>
           <li><a href="#">Contacts</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="#">Services</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Work</a></li>
+          <li><a href="#">Projects</a></li>
           <li><a href="#">Contacts</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
